# QuadriFlow

./: .gitignore  .gitmodules  CMakeLists.txt  examples-unbound.py  examples.py
include/: adapters.h  bootstrap.h  dedge.h  dedge.hpp  entities.h  field-math.h  field-math.hpp  flow.h  flow.hpp  hierarchy.h  hierarchy.hpp  loader.h  loader.hpp  localsat.hpp  mathext.h  meshing.h  optimizer.h  optimizer.hpp  parametrizer.h  parametrizer.hpp  persistence.h  quadriflow.h  sdfn.h  services.h  smoothing.h  subdivide.h  subdivide.hpp  surfacenets.h  svd.h  transformations.h
libs/pcg32/include/: pcg32.h
scripts/: benchmark.py  examples-unbound.py  examples.py  package.py  rename.py
src/: MC33_util_grd.c  adapters.cpp  adjacent-matrix.cpp  adjacent-matrix.hpp  bootstrap.cpp  compare-key.hpp  config.hpp  dedge.cpp  dedge.hpp  disajoint-tree.hpp  dset.hpp  entities.h  field-math.hpp  flow.hpp  hierarchy.cpp  hierarchy.hpp  loader.cpp  loader.hpp  localsat.cpp  localsat.hpp  main.cpp  marching_cubes_33.c  mathext.cpp  merge-vertex.cpp  merge-vertex.hpp  meshing.cpp  optimizer.cpp  optimizer.hpp  parametrizer-flip.cpp  parametrizer-int.cpp  parametrizer-mesh.cpp  parametrizer-scale.cpp  parametrizer-sing.cpp  parametrizer.cpp  parametrizer.hpp  persistence.cpp  quadriflow.cpp  sdfn.cpp  serialize.hpp  services.cpp  (+6 more)
tests/: CMakeLists.txt  test_e2e.cpp  test_libraries.cpp  test_mathext.cpp  test_meshing.cpp  test_migration.cpp  test_openmesh.cpp  test_persistence.cpp  test_sdfn.cpp  test_services.cpp  test_smoothing.cpp  test_surfacenets.cpp  test_transformations.cpp
tests/resources/: box-complex.ubs  box-sharp-aligned.ubs  box-sharp-round-aligned.ubs  box-sharp-round-rotated.ubs  box.json  box.ply  box.ubs  sausage.ubs  sphere.ply  svd-component.json
tests/resources/benchmark/: 00-case.ubs  05-case.ubs  1-sphere.ubs  10-pentagon-rounded-rotated.ubs  12-case.ubs  13-case.ubs  14-box-sphere-union-sharp.ubs  15-box-sphere-union-sharp-rotated.ubs  16-box-sphere-cut-rounded.ubs  16-case.ubs  18-box-sphere-cut-roundedx-rotated.ubs  19-case.skip.ubs  2-ellipsoid.ubs  23-case.ubs  24-case.ubs  25-case.ubs  29-case.skip.ubs  30-case.skip.ubs  37-case.ubs  38-case.ubs  40-case.ubs  55-case.ubs  6-box-roundedxy-rotated.ubs  8-pentagon-sharp.ubs  A-01.only-19.ubs  A-02.ubs  A-03.only.ubs  A-04.only.ubs  A-05.ubs  A-06.ubs  A-07.ubs  A-08.ubs  Z-03.ubs  Z-04.ubs  Z-14.ubs  Z-34.ubs  Z-36.ubs  Z-39.ubs  Z-43.ubs  Z-47.ubs  (+3 more)
tests/resources/benchmark-base/: 17-box-sphere-cut-roundedx.skip.ubs  9-pentagon-rounded.ubs
tests/resources/benchmark-modeling/: case-1.ubs  case-100.ubs  case-103.ubs  case-104.ubs  case-105.ubs  case-106.ubs  case-107.ubs  case-108.ubs  case-11.ubs  case-12.ubs  case-13.ubs  case-15.ubs  case-16.ubs  case-17.ubs  case-18.ubs  case-20.ubs  case-21.ubs  case-22.ubs  case-23.ubs  case-24.ubs  case-25.ubs  case-27.ubs  case-28.ubs  case-29.ubs  case-3.ubs  case-30.ubs  case-31.ubs  case-32.ubs  case-33.ubs  case-35.ubs  case-36.ubs  case-37.ubs  case-38.ubs  case-39.ubs  case-4.ubs  case-40.ubs  case-41.ubs  case-42.ubs  case-43.ubs  case-44.ubs  (+49 more)
